fix improprer font size on mobile

--- a/packages/cfpb-forms/src/atoms/label.less
+++ b/packages/cfpb-forms/src/atoms/label.less
@@ -6,10 +6,6 @@
     font-size: unit((16px / @base-font-size-px), rem);
     font-weight: normal;
 
-    .respond-to-max( @bp-xs-max, {
-      font-size: unit((14px / @base-font-size-px), rem);
-    });
-
     &__block {
       display: block;
 
